--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "nodemailer": "^6.8.0",
     "validator": "^13.7.0"
   }
 }
